# tyger

./: LICENSE  README.md  tyger.cabal
Examples/: AvailabilitySets.csp  AvailabilitySets.opsem  AvailabilitySetsExample.csp  AvailabilitySetsExample_Compiled.csp  CCS.csp  CCS.opsem  CCSPhils.csp  CCSPhils_Compiled.csp  CSP.csp  CSP.opsem  DiningPhilosophers.csp  DiningPhilosophers_Compiled.csp  ReadyTesting.csp  ReadyTesting.opsem  ReadyTestingExample.csp  ReadyTestingExample_Compiled.csp  ReplicatedCSP.csp  ReplicatedCSP_Compiled.csp  SingletonAvailabilityTesting.csp  SingletonAvailabilityTesting.opsem  SingletonAvailabilityTestingExample.csp  SingletonAvailabilityTestingExample_Compiled.csp
src/: CSPMDataStructures.hs  CSPMParser.hs  CSPMPrettyPrinter.hs  CSPMPrettyPrinter.hs-boot  CSPMRecursionRefactorings.hs  ConstantCode.hs  Main.hs  OpSemParser.hs  OpSemRules.hs  OpSemTypeChecker.hs  OperatorParsers.hs  Util.hs
src/CSPMTypeChecker/: TCBuiltInFunctions.hs  TCCommon.hs  TCDecl.hs  TCDecl.hs-boot  TCDependencies.hs  TCExpr.hs  TCModule.hs  TCMonad.hs  TCPat.hs  TCUnification.hs
src/Compiler/: CompileLTS.hs
